package eu.telecomnancy.rpg;

public class Armor {
    public String name;
    public int defense;

    public Armor(String name, int defense) {
        this.name = name;
        this.defense = defense;
    }
}
